Btn align fix 1
first attempt at fixing the alignment of the text button

--- a/index.css
+++ b/index.css
@@ -70,6 +70,7 @@ input[type=text]:focus{
 	width: 75px;
 	text-align: center;
 	font-size: 20px;
+	margin: 0px;
 }
 
 .circle {
